k8s/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rn-jesus
  name: rn-jesus-deploy
  namespace: rn-jesus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rn-jesus
  template:
    metadata:
      labels:
        app: rn-jesus
    spec:
      containers:
        - image: rn_jesus
          name: rn-jesus-container
          ports:
            - containerPort: 3000
