k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rn-jesus-srv
  namespace: rn-jesus
spec:
  selector:
    app: rn-jesus
  ports:
    - name: rn-jesus-ports
      protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
