k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rn-jesus-ingress
  namespace: rn-jesus
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: "ec2-18-197-155-165.eu-central-1.compute.amazonaws.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rn-jesus-srv
                port:
                  number: 80
